--- a/src/TinyBlazorAdmin/wwwroot/appsettings.json
+++ b/src/TinyBlazorAdmin/wwwroot/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureAd": {
-    "Authority": "https://login.microsoftonline.com/206bad4c-d071-4c91-9181-ef7047e6590b",
-    "ClientId": "737debc6-39bb-4e71-8c3e-27bdf3b18846",
+    "Authority": "https://login.microsoftonline.com/b5edce5d-fdec-43ae-bc2d-6919437e90af",
+    "ClientId": "f8da2af6-1df9-43f6-b3e7-371b402141ae",
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://azshorterdevrtm3e.azurewebsites.net/"
+    "Endpoint": "https://shortenertoolso7tq5.azurewebsites.net/"
   },
-  "DetailedErrors":true
+  "DetailedErrors": true
 }
